moving template data in md file, editing editorconfig, removing cuba.yaml

--- a/themes/trackfellas/layout/_partial/head.ejs
+++ b/themes/trackfellas/layout/_partial/head.ejs
@@ -1,35 +1,38 @@
-  <head>
-        <meta charset="utf-8">
-                <%
-        var title = page.title %>
-        <title>
-        <% if (title){ %><%= title %> | <% } %> <%= config.title %></title>
-        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-        <meta name="bitly-verification" content="33323f8295d0"/>
-        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+<head>
+    <meta charset="utf-8">
+    <%
+    var title = page.title %>
+    <title>
+        <% if (title){ %>
+        <%= title %> |
+        <% } %>
+        <%= config.title %></title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <meta name="bitly-verification" content="33323f8295d0"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-        <%- open_graph({
-            image: page.cover,
-            twitter_id: theme.twitter,
-            google_plus: theme.google_plus,
-            fb_admins: theme.fb_admins,
-            fb_app_id: theme.fb_app_id
-        }) %>
-        <link rel="apple-touch-icon" sizes="57x57" href="<%- url_for('apple-touch-icon-57x57.png') %>">
-        <link rel="apple-touch-icon" sizes="114x114" href="<%- url_for('apple-touch-icon-114x114.png') %>">
-        <link rel="apple-touch-icon" sizes="72x72" href="<%- url_for('apple-touch-icon-72x72.png') %>">
-        <link rel="apple-touch-icon" sizes="144x144" href="<%- url_for('apple-touch-icon-144x144.png') %>">
-        <link rel="apple-touch-icon" sizes="60x60" href="<%- url_for('apple-touch-icon-60x60.png') %>">
-        <link rel="apple-touch-icon" sizes="120x120" href="<%- url_for('apple-touch-icon-120x120.png') %>">
-        <link rel="apple-touch-icon" sizes="76x76" href="<%- url_for('apple-touch-icon-76x76.png') %>">
-        <link rel="apple-touch-icon" sizes="152x152" href="<%- url_for('apple-touch-icon-152x152.png') %>">
-        <link rel="icon" type="image/png" href="<%- url_for('favicon-32x32.png') %>" sizes="32x32">
-        <% if (theme.rss){ %>
-        <link rel="alternate" href="<%- theme.rss %>" title="<%= config.title %>" type="application/atom+xml">
-        <% } %>
-        <% if (theme.favicon){ %>
-        <link rel="icon" href="<%- theme.favicon %>">
-        <% } %>
-        <%- css('css/app') %>
-        <%- js('js/modernizr') %>
-    </head>
+    <%- open_graph({
+        image: page.cover,
+        twitter_id: theme.twitter,
+        google_plus: theme.google_plus,
+        fb_admins: theme.fb_admins,
+        fb_app_id: theme.fb_app_id
+    }) %>
+    <link rel="apple-touch-icon" sizes="57x57" href="<%- url_for('apple-touch-icon-57x57.png') %>">
+    <link rel="apple-touch-icon" sizes="114x114" href="<%- url_for('apple-touch-icon-114x114.png') %>">
+    <link rel="apple-touch-icon" sizes="72x72" href="<%- url_for('apple-touch-icon-72x72.png') %>">
+    <link rel="apple-touch-icon" sizes="144x144" href="<%- url_for('apple-touch-icon-144x144.png') %>">
+    <link rel="apple-touch-icon" sizes="60x60" href="<%- url_for('apple-touch-icon-60x60.png') %>">
+    <link rel="apple-touch-icon" sizes="120x120" href="<%- url_for('apple-touch-icon-120x120.png') %>">
+    <link rel="apple-touch-icon" sizes="76x76" href="<%- url_for('apple-touch-icon-76x76.png') %>">
+    <link rel="apple-touch-icon" sizes="152x152" href="<%- url_for('apple-touch-icon-152x152.png') %>">
+    <link rel="icon" type="image/png" href="<%- url_for('favicon-32x32.png') %>" sizes="32x32">
+    <% if (theme.rss){ %>
+    <link rel="alternate" href="<%- theme.rss %>" title="<%= config.title %>" type="application/atom+xml">
+    <% } %>
+    <% if (theme.favicon){ %>
+    <link rel="icon" href="<%- theme.favicon %>">
+    <% } %>
+    <%- css('css/app') %>
+    <%- js('js/modernizr') %>
+</head>
