--- a/themes/trackfellas/layout/_partial/footer.ejs
+++ b/themes/trackfellas/layout/_partial/footer.ejs
@@ -1,14 +1,15 @@
 <footer>
-<div class="footer text-center">
+    <div class="footer text-center">
         <ul>
 
             <% for (var i in theme.menu){ %>
-          <li><a href="<%- url_for(theme.menu[i]) %>"><%= i %></a><span class="divider"></span></li>
-        <% } %>
-                <li><a href="<%- url_for('privacy.html') %>">Privacy</a><span class="divider"></span></li>
-                <li><a href="<%- url_for('impressum.html') %>">Impressum</a><span class="divider"></span></li><li>Copyright Trackfellas 2015</li>
+            <li><a href="<%- url_for(theme.menu[i]) %>"><%= i %></a><span class="divider"></span></li>
+            <% } %>
+            <li><a href="<%- url_for('privacy.html') %>">Privacy</a><span class="divider"></span></li>
+            <li><a href="<%- url_for('impressum.html') %>">Impressum</a><span class="divider"></span></li>
+            <li>Copyright Trackfellas 2015</li>
 
 
         </ul>
-</div>
-    </footer>
+    </div>
+</footer>
