--- a/themes/trackfellas/source/css/_trackfellas.scss
+++ b/themes/trackfellas/source/css/_trackfellas.scss
@@ -1201,79 +1201,9 @@ $social-list: (
         border-bottom: 10px solid transparent;
     }
 }
-
-// Multipage css
-.multipage_nav {
-    border-top: 1px solid #CCC;
-    padding-top: 10px;
-}
-
-.multipage_nav a {
-    font-weight: bold;
-    display: block;
-    padding: 10px 20px;
-    color: #FFF;
-    text-shadow: #333 1px 1px 5px;
-    text-decoration: none;
-    -moz-box-shadow: 0px 0px 5px #333;
-    -webkit-box-shadow: 0px 0px 5px #333;
-}
-
-.multipage_nav .multipage_next {
-    @extend .button;
-}
-
-.multipage_nav .multipage_back {
-    @extend .button;
-}
-
-.multipage_nav .submit {
-
-    @extend .button
-}
-
-.multipage_nav .multipage_state {
-    display: block;
-    text-align: center;
-    width: 100px;
-    margin-left: auto;
-    margin-right: auto;
-    font-size: 18px;
-}
-
-.multipage fieldset {
-    @extend .panel
-}
-
-div.clearer {
-    display: block;
+.hide-form {
     visibility: hidden;
-    clear: both;
     height: 0;
-    border-width: 0;
-    margin: 0;
     padding: 0;
-}
-
-ul.multipage_tabs {
-    list-style-type: none;
-    margin: 0px;
-    padding: 0px;
-    border-bottom: 1px solid #CCC;
-    margin-bottom: 20px;
-}
-
-ul.multipage_tabs li {
-    display: block;
-    float: left;
-    margin-right: 20px;
-}
-
-ul.multipage_tabs li a {
-    display: block;
-    padding: 10px;
-}
-
-ul.multipage_tabs li.active {
-    background: #CCC;
+    margin: 0;
 }
