fixing yml editing route, adding pictures adding gallery feature changing lots of css

--- a/themes/trackfellas/source/css/_settings.scss
+++ b/themes/trackfellas/source/css/_settings.scss
@@ -386,7 +386,7 @@ $accordion-navigation-font-color: $white    ;
 // $accordion-navigation-font-size: rem-calc(16);
 // $accordion-navigation-font-family: $body-font-family;
 
-// $accordion-content-padding: ($column-gutter/2);
+$accordion-content-padding: 1.85rem;
 // $accordion-content-active-bg-color: $white;
 
 // 02. Alert Boxes
