fixes to yam and a few lines in the route

--- a/themes/trackfellas/source/css/_trackfellas.scss
+++ b/themes/trackfellas/source/css/_trackfellas.scss
@@ -1380,3 +1380,9 @@ $social-list: (
 .descriptionpic {
     margin: 1.5rem .5rem;
 }
+
+@media #{$medium-up} {
+    .feedback-form {
+        height: 450px;
+    }
+}
