--- a/themes/trackfellas/source/css/_trackfellas.scss
+++ b/themes/trackfellas/source/css/_trackfellas.scss
@@ -37,6 +37,9 @@ ul.accordion {
 
 .accordion-navigation {
     padding-bottom: .1875rem;
+    h3 {
+        font-size: 1rem;
+    }
 }
 
 .big-content {
@@ -102,7 +105,6 @@ ul.accordion {
     $float: right
     );
     margin-bottom: 1.5rem;
-    max-height: 5rem;
 }
 .small-content {
     @include grid-column(
@@ -1375,7 +1377,9 @@ $social-list: (
     $collapse: false,
     $float: right
     );
-    margin-bottom: 1.8rem;
+
+    margin-top: 1.8rem;
+    padding-top: 2rem;
 }
 .descriptionpic {
     margin: 1.5rem .5rem;
@@ -1385,4 +1389,43 @@ $social-list: (
     .feedback-form {
         height: 450px;
     }
+}
+
+@media #{$medium-up} {
+    .social-bar {
+        ul {
+            margin-left: 0;
+            display: block;
+        }
+        margin: 0;
+        left: 0;
+        width: 60px;
+        max-height: 200px;
+        position: fixed;
+        top: 150px;
+    }
+
+    .social-bar li a {
+        display: block;
+        height: 60px;
+        width: 60px;
+        background: #222;
+        font: normal normal normal 1.3rem/1.7rem 'FontAwesome', 'Source Sans Pro', Helvetica, Arial, sans-serif;
+        color: #fff;
+        -webkit-font-smoothing: antialiased;
+        padding: 15px;
+        text-decoration: none;
+        text-align: center;
+        transition: background .4s ease .300ms
+    }
+}
+
+.feedback-modal {
+    position: fixed;
+    margin: 0;
+    left: 0;
+    top: 150px;
+
+
+
 }
