--- a/themes/trackfellas/source/css/_trackfellas.scss
+++ b/themes/trackfellas/source/css/_trackfellas.scss
@@ -24,7 +24,7 @@ body {
 
 @mixin content-sec-route {
     @include content-sec;
-    padding: 3.75rem 0rem 0rem 0rem;
+    padding: 5.625rem 0rem 0rem 0rem;
     p {
         padding-bottom: 0rem;
     }
@@ -38,7 +38,7 @@ ul.accordion {
 .accordion-navigation {
     padding-bottom: .1875rem;
     h3 {
-        font-size: 1rem;
+        font-size: 1.2rem;
     }
 }
 
@@ -66,6 +66,14 @@ ul.accordion {
     @include content-sec-route;
 }
 
+.route-details-section {
+    @extend .big-content-route;
+    padding-top: 4.375rem;
+    h2 {
+        padding-bottom: 4.375rem;
+        margin-bottom: 0;
+    }
+}
 .normal-content {
     @include grid-column(
     $columns: 8,
@@ -81,6 +89,18 @@ ul.accordion {
 .normal-content-first {
     @extend .normal-content;
     padding: 3.75rem 0 0 0;
+}
+.route-title-section, .route-feedback-section {
+    @include grid-column(
+    $columns: 8,
+    $last-column: true,
+    $center: true,
+    $offset: 2,
+    $collapse: false,
+    $float: right
+    );
+    @include content-sec-route;
+    padding: 4.375rem 0 0 0;
 }
 
 .normal-content-route {
@@ -106,6 +126,7 @@ ul.accordion {
     );
     margin-bottom: 1.5rem;
 }
+
 .small-content {
     @include grid-column(
     $columns: 6,
@@ -128,8 +149,21 @@ ul.accordion {
     $float: right
     );
     @include content-sec-route;
+    p {
+        padding-top: 1.875rem;
+    }
 }
 
+.route-traveler-section {
+    @extend .small-content-route;
+    text-align: center;
+    p {
+        padding-bottom: 1.875rem;
+    }
+    a.button.primary {
+        margin: 0;
+    }
+}
 .small-content-contact {
     @extend .small-content;
     padding: 0;
@@ -154,7 +188,7 @@ iframe {
 }
 
 .footer {
-    margin: .8rem;
+    margin: 0rem;
     padding: 0;
     li {
         display: inline;
@@ -168,7 +202,7 @@ iframe {
 footer {
     background: $nikabraun;
     color: white;
-    padding: 1rem 0 1rem 0;
+    padding: .5rem 0 .5rem 0;
     a {
         color: white;
     }
@@ -201,7 +235,7 @@ strong {
 .top-bar-section li:not(.has-form) a:not(.button):hover {
     background-color: #555555;
     background: transparent;
-    padding-bottom: -10px;
+    margin-bottom: -1px;
     border-bottom: 1px solid $rot;
 }
 
@@ -252,7 +286,7 @@ strong {
 }
 
 .routepic {
-    margin: 1rem auto;
+    margin: 0 auto 0 auto;
     width: 11rem;
     /*    border-radius: 80%;
         border: 3px solid white;*/
@@ -295,6 +329,7 @@ strong {
 }
 
 // other special pages:
+
 .accordion-overview {
     @extend .accordion-navigation
 }
@@ -303,19 +338,23 @@ strong {
     background: $braun;
     color: #fff;
     display: block;
-    padding: 1rem;
+    padding: 7px;
 }
+
 .accordion .accordion-overview > a:hover {
     background: scale-color($braun, $lightness: -5%);
 }
+
 .accordion .accordion-overview > a:after {
     background: $braun;
 }
-.accordion-overview  {
+
+.accordion-overview {
     @include accordion-navigation;
     $accordion-navigation-hover-bg-color: scale-color($nikabraun, $lightness: -5%);
     $accordion-navigation-active-bg-color: scale-color($braun, $lightness: -3%);
 }
+
 .impressum {
     padding-top: 0rem;
     h2 {
@@ -787,6 +826,8 @@ $social-list: (
 // Slider appearance
 /* Slider */
 .galerie {
+    margin-top: 1.25rem;
+    margin-bottom: 0;
 }
 
 .slick-slider {
@@ -1033,7 +1074,7 @@ $social-list: (
     padding: 1.5rem;
 }
 
-    //The accordion is closed
+//The accordion is closed
 .accordion-icon:before {
     padding-left: 1rem;
     content: "\f067";
@@ -1253,7 +1294,7 @@ $social-list: (
         -ms-user-select: none;
         user-select: none;
         /* IE9 hack, otherwise navigation doesn't appear */
-        background: rgba(0,0,0,0);
+        background: rgba(0, 0, 0, 0);
     }
 
     .featherlight-previous {
@@ -1263,9 +1304,8 @@ $social-list: (
 
     .featherlight-next:hover,
     .featherlight-previous:hover {
-        background: rgba(255,255,255,0.25);
+        background: rgba(255, 255, 255, 0.25);
     }
-
 
     .featherlight-next span,
     .featherlight-previous span {
@@ -1295,7 +1335,6 @@ $social-list: (
         left: auto;
     }
 
-
     .featherlight-next:hover span,
     .featherlight-previous:hover span {
         display: inline-block;
@@ -1303,12 +1342,12 @@ $social-list: (
 
     /* Hide navigation while loading */
     .featherlight-loading .featherlight-previous, .featherlight-loading .featherlight-next {
-        display:none;
+        display: none;
     }
 }
 
 /* Always display arrows on touch devices */
-@media only screen and (max-device-width: 1024px){
+@media only screen and (max-device-width: 1024px) {
     .featherlight-next:hover,
     .featherlight-previous:hover {
         background: none;
@@ -1340,34 +1379,16 @@ $social-list: (
     }
 }
 
-.hide-form {
-    visibility: hidden;
-    height: 0;
-    padding: 0;
-    margin: 0;
-}
-.label-form-headline {
-    @extend h3;
-    color: $nikagrau;
-    font-size: 1.2rem;
-    padding-bottom: 1.5rem;
- }
 
-.feedback_last-list {
-    column-count:2;
-    margin: .5em 0 0 0;
-    padding: 0;
-    columns: 2;
-    -webkit-columns: 2;
-    -moz-columns: 2;
-}
 .accordion-navigation .content h4 {
     color: $nikagrau;
 }
+
 .fa-arrow-down {
     padding-left: .5rem;
     padding-right: .5rem;
 }
+
 #disqus_thread {
     @include grid-column(
     $columns: 10,
@@ -1378,54 +1399,113 @@ $social-list: (
     $float: right
     );
 
-    margin-top: 1.8rem;
-    padding-top: 2rem;
+    margin-top: 3.125rem;
+    padding-top: 0rem;
 }
+
 .descriptionpic {
     margin: 1.5rem .5rem;
 }
 
-@media #{$medium-up} {
-    .feedback-form {
-        height: 450px;
-    }
+
+// Feedback Form
+
+.form-container {
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+.form-content {
+    position: relative;
+    height: 70%;
+}
+.form-nav {
+    position: relative;
+    width: 100%;
+    height: 30%;
+    margin: 0 auto;
+    padding: 0rem;
+
+}
+.hidden {
+    display: none;
+}
+
+.label-form-headline {
+    @extend h3;
+    color: $nikagrau;
+    font-size: 1.2rem;
+    margin-top: 1rem;
+    padding-bottom: 1.5rem;
+}
+
+.feedback-list {
+    list-style: none;
+    column-count: 2;
+    margin: .5em 0 0 0;
+    padding: 0;
+    columns: 2;
+    -webkit-columns: 2;
+    -moz-columns: 2;
+}
+
+.forward-button {
+    @include button;
+    position: relative;
+    background: $rot;
+    float: right;
+
+}
+
+.back-button {
+    @include button;
+    position: relative;
+    background: $rot;
+    float: left;
+
+}
+.feedback-side {
+    visibility: hidden;
+
 }
 
 @media #{$medium-up} {
-    .social-bar {
-        ul {
-            margin-left: 0;
-            display: block;
-        }
-        margin: 0;
-        left: 0;
-        width: 60px;
-        max-height: 200px;
+    .feedback-side {
         position: fixed;
-        top: 150px;
-    }
-
-    .social-bar li a {
-        display: block;
-        height: 60px;
+        visibility: visible;
+        top: 350px;
+        left: 0;
+        padding: 5px;
+        background: $blau;
+        font-size: 1.5rem;
+        font-family: $font-family-menu;
+        height: 130px;
         width: 60px;
-        background: #222;
-        font: normal normal normal 1.3rem/1.7rem 'FontAwesome', 'Source Sans Pro', Helvetica, Arial, sans-serif;
-        color: #fff;
-        -webkit-font-smoothing: antialiased;
-        padding: 15px;
-        text-decoration: none;
-        text-align: center;
-        transition: background .4s ease .300ms
+        a {
+            transform: rotate(90deg);
+            -webkit-transform: rotate(90deg);
+            color: white;
+            display: inline-block;
+            margin-top: 2.75rem;
+            margin-left: -1.8rem;
+
+        }
+
     }
-}
+    .form-container {
+        position: relative;
+        width: 100%;
+        max-height: 27rem;
+    }
+    .form-content {
+        position: relative;
+        height: 20rem;
+    }
+    .form-nav {
+        position: relative;
+        width: 50%;
+        margin: 0 auto;
+        padding: 0 4rem;
 
-.feedback-modal {
-    position: fixed;
-    margin: 0;
-    left: 0;
-    top: 150px;
-
-
-
+    }
 }
