adding validation to form

--- a/themes/trackfellas/source/css/_settings.scss
+++ b/themes/trackfellas/source/css/_settings.scss
@@ -105,6 +105,7 @@ $font-family-menu: 'ExoMedium', Exo, Helvetica, Roboto, Arial;
 $font-family-head: 'ExoMedium', Exo, Helvetica, Roboto, Arial;
 $font-family-para: 'RobotoLight', Roboto, Arial;
 $font-awesome: 'fontawesome';
+$font-family-bold: 'RobotoRegular';
 // We use these to define default font stacks
 $font-family-sans-serif: $font-family-para;
 // $font-family-serif: Georgia, Cambria, "Times New Roman", Times, serif;
