--- a/themes/trackfellas/source/css/_trackfellas.scss
+++ b/themes/trackfellas/source/css/_trackfellas.scss
@@ -31,14 +31,20 @@ body {
 }
 
 ul.accordion {
-    margin-right: 2.563rem;
-    margin-left: 2.563rem;
+    margin-right: 0.625rem;
+    margin-left: 0.625rem;
 }
 
+@media #{$medium-up} {
+    ul.accordion {
+        margin-right: 2.563rem;
+        margin-left: 2.563rem;
+    }
+}
 .accordion-navigation {
     padding-bottom: .1875rem;
     h3 {
-        font-size: 1.2rem;
+        font-size: 1.25rem;
     }
 }
 
@@ -200,7 +206,7 @@ iframe {
 }
 
 footer {
-    background: $nikabraun;
+    background: $brown;
     color: white;
     padding: .5rem 0 .5rem 0;
     a {
@@ -235,14 +241,14 @@ strong {
 .top-bar-section li:not(.has-form) a:not(.button):hover {
     background: transparent;
     margin-bottom: -1px;
-    border-bottom: 1px solid $rot;
+    border-bottom: 1px solid $primary-color;
 }
 
 // Index page
 .line-dark {
     text-transform: uppercase;
     padding-bottom: 0.625rem;
-    border-bottom: 1px solid $nikagrau;
+    border-bottom: 1px solid $gray;
     margin-bottom: 2.5rem;
 }
 
@@ -254,7 +260,7 @@ strong {
 }
 
 #about h3 {
-    color: $nikagrau;
+    color: $gray;
 }
 
 #team h2, h3, h4 {
@@ -262,7 +268,7 @@ strong {
 }
 
 #signup {
-    background: $rot;
+    background: $primary-color;
 }
 
 .white {
@@ -274,7 +280,7 @@ strong {
 }
 
 #team {
-    background: $blau;
+    background: $secondary-color;
 }
 
 .teampic {
@@ -334,26 +340,28 @@ strong {
 }
 
 .accordion .accordion-overview > a {
-    background: $braun;
+    background: $secondary-color;
     color: #fff;
     display: block;
-    padding: 7px;
+    padding: 0.9375rem;
 }
 
 .accordion .accordion-overview > a:hover {
-    background: scale-color($braun, $lightness: -5%);
+    background: scale-color($secondary-color, $lightness: -5%);
 }
 
 .accordion .accordion-overview > a:after {
-    background: $braun;
+    background: $secondary-color;
 }
 
 .accordion-overview {
     @include accordion-navigation;
-    $accordion-navigation-hover-bg-color: scale-color($nikabraun, $lightness: -5%);
-    $accordion-navigation-active-bg-color: scale-color($braun, $lightness: -3%);
+    $accordion-navigation-hover-bg-color: scale-color($secondary-color, $lightness: -5%);
+    $accordion-navigation-active-bg-color: scale-color($secondary-color, $lightness: -3%);
 }
-
+.accordion .accordion-navigation > a {
+    padding: 0.9375rem;
+}
 .impressum {
     padding-top: 0;
     h2 {
@@ -378,7 +386,7 @@ strong {
 }
 
 .mc-success {
-    color: $blau;
+    color: $secondary-color;
 }
 
 .mc-error form {
@@ -762,7 +770,7 @@ strong {
 }
 
 .preview {
-    border: 1px dotted $nikagrau;
+    border: 1px dotted $gray;
     padding: 1.5rem;
 }
 
@@ -787,7 +795,7 @@ strong {
         width: auto;
     }
     .entry {
-        border-right: 1px solid $nikagrau;
+        border-right: 1px solid $gray;
         height: 10rem;
         padding-bottom: 0;
     }
@@ -1072,7 +1080,7 @@ strong {
 }
 
 .accordion-navigation .content h4 {
-    color: $nikagrau;
+    color: $gray;
 }
 
 .fa-arrow-down {
@@ -1130,13 +1138,13 @@ strong {
 }
 
 .validation-error {
-    background: $rot;
+    background: $primary-color;
     color: white;
     font-size: .6rem;
 }
 .label-form-headline {
     @extend h3;
-    color: $nikagrau;
+    color: $gray;
     font-size: 1.2rem;
     margin-top: 1rem;
     padding-bottom: 1.5rem;
@@ -1155,7 +1163,7 @@ strong {
 .forward-button {
     @include button;
     position: relative;
-    background: $rot;
+    background: $primary-color;
     float: right;
 
 }
@@ -1163,7 +1171,7 @@ strong {
 .back-button {
     @include button;
     position: relative;
-    background: $rot;
+    background: $primary-color;
     float: left;
 
 }
@@ -1180,7 +1188,7 @@ strong {
         top: 350px;
         left: 0;
         padding: 5px;
-        background: $blau;
+        background: $secondary-color;
         font-size: 1.5rem;
         font-family: $font-family-menu;
         height: 130px;
