--- a/themes/trackfellas/source/css/_settings.scss
+++ b/themes/trackfellas/source/css/_settings.scss
@@ -502,9 +502,9 @@ $accordion-content-padding: 1.75rem;
 // $button-margin-bottom: rem-calc(20);
 
 // We use these to control button text styles.
-// $button-font-family: $body-font-family;
+$button-font-family: $font-family-bold;
 // $button-font-color: $white;
-// $button-font-color-alt: $oil;
+$button-font-color-alt: $primary-color;
 // $button-font-tny: rem-calc(11);
 // $button-font-sml: rem-calc(13);
 // $button-font-med: rem-calc(16);
@@ -516,11 +516,11 @@ $accordion-content-padding: 1.75rem;
 // $button-function-factor: -20%;
 
 // We use these to control button border and hover styles.
-// $button-border-width: 0px;
-// $button-border-style: solid;
+$button-border-width: 1px;
+$button-border-style: solid;
 $button-bg-color: $primary-color;
-// $button-bg-hover: scale-color($button-bg-color, $lightness: $button-function-factor);
-// $button-border-color: $button-bg-hover;
+$button-bg-hover: white;
+$button-border-color: $button-bg-color;
 // $secondary-button-bg-hover: scale-color($secondary-color, $lightness: $button-function-factor);
 // $secondary-button-border-color: $secondary-button-bg-hover;
 // $success-button-bg-hover: scale-color($success-color, $lightness: $button-function-factor);
@@ -529,8 +529,8 @@ $button-bg-color: $primary-color;
 // $alert-button-border-color: $alert-button-bg-hover;
 
 // We use this to set the default radius used throughout the core.
-// $button-radius: $global-radius;
-// $button-round: $global-rounded;
+// $button-radius: 2px;
+$button-round: 8px;
 
 // We use this to set default opacity and cursor for disabled buttons.
 // $button-disabled-opacity: 0.7;
