--- a/themes/trackfellas/source/css/_trackfellas.scss
+++ b/themes/trackfellas/source/css/_trackfellas.scss
@@ -2,7 +2,11 @@
 body {
     background: white;
 }
-
+p {
+    max-width: 56.25rem;
+    margin-left: auto;
+    margin-right: auto;
+}
 @mixin content-sec {
     margin: 0 auto;
     padding: 3.75rem 0 3.75rem 0;
