change hover of feedback side

--- a/themes/trackfellas/source/css/_trackfellas.scss
+++ b/themes/trackfellas/source/css/_trackfellas.scss
@@ -1222,7 +1222,8 @@ strong {
         a:hover {
             transform: rotate(90deg);
             -webkit-transform: rotate(90deg);
-            color: $secondary-color;
+            font-size: 1.6rem;
+            color: white;
             display: inline-block;
             margin-top: 2.75rem;
             margin-left: -1.8rem;
