--- a/themes/trackfellas/source/css/app.scss
+++ b/themes/trackfellas/source/css/app.scss
@@ -38,4 +38,5 @@
 // "themes/trackfellas/bower_components/foundation/scss/foundation/components/offcanvas",
 // "themes/trackfellas/bower_components/foundation/scss/foundation/components/visibility";
 @import "themes/trackfellas/bower_components/fontawesome/scss/font-awesome.scss";
+@import "themes/trackfellas/bower_components/slick.js/slick/slick.scss";
 @import "trackfellas";
