--- a/themes/trackfellas/source/css/_settings.scss
+++ b/themes/trackfellas/source/css/_settings.scss
@@ -166,11 +166,11 @@ $slick-font-family: "slick" !default;
 $slick-loader-path: "./" !default;
 $slick-arrow-color: $gray !default;
 $slick-dot-color: $gray !default;
-$slick-dot-color-active: $slick-dot-color !default;
+$slick-dot-color-active: $primary-color !default;
 $slick-prev-character: "<" !default;
 $slick-next-character: ">" !default;
 $slick-dot-character: "•" !default;
-$slick-dot-size: 30px !default;
+$slick-dot-size: 20px !default;
 $slick-opacity-default: 0.75 !default;
 $slick-opacity-on-hover: 1 !default;
 $slick-opacity-not-active: 0.25 !default;
