adding own arrows to picture gallery

--- a/themes/trackfellas/source/css/_settings.scss
+++ b/themes/trackfellas/source/css/_settings.scss
@@ -164,8 +164,8 @@ $alert-color: $primary-color;
 $slick-font-path: "../fonts/" !default;
 $slick-font-family: "slick" !default;
 $slick-loader-path: "./" !default;
-$slick-arrow-color: $gray !default;
-$slick-dot-color: $gray !default;
+$slick-arrow-color: $primary-color !default;
+$slick-dot-color: $primary-color !default;
 $slick-dot-color-active: $primary-color !default;
 $slick-prev-character: "<" !default;
 $slick-next-character: ">" !default;
