--- a/themes/trackfellas/source/css/_trackfellas.scss
+++ b/themes/trackfellas/source/css/_trackfellas.scss
@@ -36,23 +36,27 @@ p {
 }
 
 ul.accordion {
-    margin-right: 0.5625rem;
-    margin-left: 0.5625rem;
+    margin-right: 0.3rem;
+    margin-left: 0.3rem;
 }
-
+.accordion-navigation {
+    padding-bottom: .1875rem;
+    h3 {
+        font-size: 1rem;
+    }
+}
 @media #{$medium-up} {
     ul.accordion {
 margin: 0 auto;
         max-width:  61.25rem;
     }
-}
+
 .accordion-navigation {
-    padding-bottom: .1875rem;
     h3 {
         font-size: 1.25rem;
     }
 }
-
+}
 .big-content {
     @include grid-column(
     $columns: 10,
@@ -345,15 +349,28 @@ strong {
     $accordion-navigation-hover-bg-color: scale-color($secondary-color, $lightness: -5%);
     $accordion-navigation-active-bg-color: scale-color($secondary-color, $lightness: -3%);
 }
-
 .accordion .accordion-overview > a {
     background: $secondary-color;
     color: #fff;
     display: block;
+    padding: 0.3rem;
+    text-align: left;
+}
+
+.accordion .accordion-navigation > a {
+    padding: 0.3rem;
+    text-align: left;
+}
+@media #{$medium-up} {
+    .accordion .accordion-overview > a {
+        padding: 0.625rem;
+        text-align: center;
+    }
+ .accordion .accordion-navigation > a {
     padding: 0.625rem;
     text-align: center;
 }
-
+}
 .accordion .accordion-overview > a:hover {
     background: scale-color($secondary-color, $lightness: -5%);
 }
@@ -365,10 +382,7 @@ strong {
     background: $secondary-color;
 }
 
-.accordion .accordion-navigation > a {
-    padding: 0.625rem;
-    text-align: center;
-}
+
 .impressum {
     padding-top: 0;
     h2 {
@@ -540,11 +554,8 @@ strong {
     text-align: center;
     max-width:  61.25rem;
 }
-
 .slide-image {
-    img {
-        margin: 0 auto;
-    }
+    padding-right: 7px;
 }
 @function slick-image-url($url) {
     @if function-exists(image-url) {
@@ -637,8 +648,8 @@ strong {
     li {
         position: relative;
         display: inline-block;
-        height: 20px;
-        width: 20px;
+        height: 12px;
+        width: 12px;
         margin: 0 5px;
         padding: 0;
         cursor: pointer;
@@ -647,8 +658,8 @@ strong {
             border-radius: 80%;
             background: transparent;
             display: block;
-            height: 20px;
-            width: 20px;
+            height: 12px;
+            width: 12px;
             outline: none;
             line-height: 0px;
             font-size: 0px;
@@ -666,11 +677,11 @@ strong {
                 top: 0;
                 left: 0;
                 content: $slick-dot-character;
-                width: 20px;
-                height: 20px;
+                width: 12px;
+                height: 12px;
                 font-family: $slick-font-family;
                 font-size: $slick-dot-size;
-                line-height: 20px;
+                line-height: 12px;
                 text-align: center;
                 color: $slick-dot-color;
                 opacity: $slick-opacity-not-active;
@@ -684,7 +695,7 @@ strong {
         }
     }
 }
-
+.slide-image
 
 .preview {
     border: 1px dotted $gray;
@@ -698,14 +709,19 @@ strong {
     display: inline-block;
     font-family: $font-awesome;
     text-rendering: auto;
-    padding-right: 1.25rem;
+    padding-right: 0.5rem;
     line-height: .75;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    font-size: 1.9rem;
+    font-size: 1.5rem;
     content: "\f067";
 }
-
+@media #{$medium-up} {
+    .accordion-icon:before {
+        padding-right: 1.25rem;
+        font-size: 1.9rem;
+    }
+}
 //The accordion is open
 .active .accordion-icon:before {
     content: "\f068";
@@ -1108,7 +1124,7 @@ strong {
 
 }
 .caption {
-    display: none;
+    display: none!important;
 }
 @media #{$medium-up} {
     .feedback-side {
