--- a/themes/trackfellas/source/css/_trackfellas.scss
+++ b/themes/trackfellas/source/css/_trackfellas.scss
@@ -546,7 +546,7 @@ strong {
 
 // Slider appearance
 /* Slider */
-.galerie {
+#galerie {
     margin-top: 3.125rem;
     margin-bottom: 0;
     margin-left: auto;
@@ -810,7 +810,10 @@ strong {
         /* IE8 "hack" for nested featherlights */
         background: rgba(0, 0, 0, 0);
     }
-
+.featherlight-close-icon {
+    content: url('../img/close.svg');
+    background: none;
+}
     /* support for nested featherlights. Does not work in IE8 (use JS to fix) */
     .featherlight:last-of-type {
         background: rgba(0, 0, 0, 0.8);
@@ -836,8 +839,7 @@ strong {
 
         /* dimensions: cut off images */
         overflow: auto;
-        padding: 5px 5px 0;
-        border-bottom: 5px solid transparent;
+        padding: 0px 0px 0;
 
         /* dimensions: handling small or empty content */
         min-width: 30%;
@@ -876,9 +878,6 @@ strong {
         cursor: pointer;
         text-align: center;
         font: Arial, sans-serif;
-        background: #fff; /* Set the background in case it overlaps the content */
-        background: rgba(255, 255, 255, 0.3);
-        color: #000;
     }
 
     .featherlight .featherlight-image {
@@ -940,23 +939,29 @@ strong {
     }
 
     .featherlight-previous {
+
         left: 25px;
         right: 80%;
+    }
+    .featherlight-next span {
+        content: url('../img/for.svg');
+    }
+    .featherlight-previous span {
+        content: url('../img/back.svg');
     }
 
     .featherlight-next:hover,
     .featherlight-previous:hover {
-        background: rgba(255, 255, 255, 0.25);
     }
 
     .featherlight-next span,
     .featherlight-previous span {
         display: none;
         position: absolute;
-
-        top: 50%;
-        left: 5%;
+        top: 40%;
+        left: -15%;
         width: 82%;
+        height: 5rem;
 
         /* center horizontally */
         text-align: center;
@@ -973,7 +978,7 @@ strong {
         font-weight: normal;
     }
     .featherlight-next span {
-        right: 5%;
+        right: -15%;
         left: auto;
     }
 
@@ -1021,6 +1026,14 @@ strong {
     }
 }
 
+.caption {
+    position: absolute;
+    bottom: 0;
+    margin-right: 1rem;
+    padding: 0.2rem 2rem 0.2rem 0.6rem;
+    background-color: white;
+
+}
 .accordion-navigation .content h4 {
     color: $gray;
 }
@@ -1122,9 +1135,6 @@ strong {
 .feedback-side {
     visibility: hidden;
 
-}
-.caption {
-    display: none!important;
 }
 @media #{$medium-up} {
     .feedback-side {
