replacing iframe with map object

--- a/themes/trackfellas/layout/_partial/after-footer.ejs
+++ b/themes/trackfellas/layout/_partial/after-footer.ejs
@@ -13,6 +13,7 @@
     })();
 </script>
 <% } %>
+<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&signed_in=true"></script>
 <%- partial('google-analytics') %>
 <%- js('js/script') %>
 
